--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
+        "@types/morgan": "^1.9.4",
         "@types/node": "18.15.11",
         "@types/nodemon": "^1.19.2",
         "nodemon": "^3.0.1",
@@ -20,8 +22,10 @@
         "typescript": "^5.1.6"
     },
     "dependencies": {
+        "cors": "2.8.5",
         "dotenv": "16.0.3",
         "express": "^4.18.2",
-        "mongoose": "^7.4.3"
+        "mongoose": "^7.4.3",
+        "morgan": "1.10.0"
     }
 }
