--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "express": "^4.18.2",
         "jsonwebtoken": "9.0.0",
         "mongoose": "^7.4.3",
-        "morgan": "1.10.0"
+        "morgan": "1.10.0",
+        "zod": "3.21.4"
     }
 }
