--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "bcrypt": "5.1.0",
+        "cheerio": "1.0.0-rc.12",
         "cors": "2.8.5",
         "dotenv": "16.0.3",
         "express": "^4.18.2",
